# YorkieEngine

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  GenerateProjectFiles.bat  Jolie  LICENSE  README.md  Rotator.cpp  Rotator.h  Transformable.h  YorkieEngine.aps  YorkieEngine.sln  YorkieEngine.vcxproj  YorkieEngine.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  resource.h
Dependencies/ImGuizmo/example/: ImGuizmoSample.vcxproj  main.cpp
Dependencies/ImGuizmo/include/: GraphEditor.h  ImCurveEdit.h
Dependencies/assimp/lib/: assimp-vc143-mtd.exp
Dependencies/glfw/: GLFW.sln
Dependencies/glfw/lib/: glfw3.lib
Dependencies/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glfw.vcxproj  update_mappings.vcxproj
Dependencies/glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
Libraries/glfw/src/: cmake_install.cmake  glfw.vcxproj.filters  update_mappings.vcxproj.filters
YorkieEngine/: Buffer.cpp  Buffer.h  YorkieEngine.cpp  YorkieEngine.h  YorkieEngine.vcxproj  YorkieEngine.vcxproj.filters
YorkieEngine/Application/: YorkiEngineApp.cpp  YorkiEngineApp.h
YorkieEngine/Camera/: Camera.cpp  Camera.h
YorkieEngine/Components/: TransformComponent.h
YorkieEngine/Input/: Controller.cpp  Controller.h  Input.cpp  Input.h
YorkieEngine/Ligthing/: BasicLight.cpp  BasicLight.h
YorkieEngine/Logging/Private/: Logger.cpp
YorkieEngine/Logging/Public/: Logger.h
YorkieEngine/Math/: Mat4x4.cpp  Vector2D .cpp  Vector3D.cpp
YorkieEngine/Modules/: CameraModule.cpp  CameraModule.h  ShaderModule.cpp  ShaderModule.h
YorkieEngine/Rendering/: RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h  RenderingSystem.cpp  RenderingSystem.h
YorkieEngine/Rendering/Buffers/: IndexBuffer.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
YorkieEngine/Rendering/Primitives/: Cube.cpp  Cube.h
YorkieEngine/Shaders/: Shader.cpp  Shader.h
YorkieEngine/Window/Private/: Viewport.cpp  Window.cpp  WindowManager.cpp
YorkieEngine/Window/Public/: Viewport.h  Window.h  WindowManager.h
YorkieEngine/include/Camera/: Camera.h
YorkieEngine/include/Components/: BaseComponent.h  MeshComponent.h  TextureComponent.h  TransformComponent.h
YorkieEngine/include/Editor/: ContentBrowser.h  EditorWindow.h  Grid.h  LevelEditor.h  WindowTab.h
YorkieEngine/include/Engine/: Event.h  YorkiEngineApp.h  YorkieEngine.h
YorkieEngine/include/Game/: GameEntity.h  Level.h
YorkieEngine/src/: glad.cpp
res/shaders/: Cube.shader  Triangle.shader  thumbnail.shader
x64/Debug/: CodeAnalysisResultManifest.txt  YorkieEngine.dll.recipe  YorkieEngine.exp  YorkieEngine.ilk  YorkieEngine.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Release/: YorkieEngine.dll.recipe  YorkieEngine.iobj  YorkieEngine.ipdb
(+123 files in other folders)
